--- a/pages/home.html
+++ b/pages/home.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<center>
-	        <div class="ibm-frame">
-            	<div class="ibm-screen">		
+	      <!--   <div class="ibm-frame">
+            	<div class="ibm-screen"> -->		
 					<div class="container">
 						<table class="table">
 							<tbody>
@@ -113,8 +113,8 @@
 							</tbody>
 						</table>
 					</div>
-			    </div>
-	            <div class="ibm-frame-lower">
+			    <!-- </div> -->
+	       <!--      <div class="ibm-frame-lower">
 	                <p style="height: 100%;">|||||||||</p>
 	                <div class="ibm-frame-logo">
                     	<img src="../assets/images/ibm-logo.png" height="35px">
@@ -122,8 +122,8 @@
 	                <div class="ibm-frame-on-off-button">
 	                    <div class="ibm-frame-on-off-button-circle" onclick="toggleFullScreen()"></div>
 	                </div>
-	            </div> 
-        	</div>
+	            </div>  -->
+        	<!-- </div> -->
         </center>
 	</body>
 	<script src="../assets/js/computer.js" type="text/javascript"></script>
