--- a/pages/windows.html
+++ b/pages/windows.html
@@ -27,8 +27,7 @@
 		            <img src="../assets/images/windows-start-icon.jpg">
 		        </button>
 			    <div class="start-time">
-                    <p class="start-time-text">
-                    </p>
+                    <p class="start-time-text"></p>
                 </div>
 		    </div>
 
@@ -79,7 +78,7 @@
                             <div class="start-menu-items-item-arrowright"></div>          
                         </li>
 
-                        <li class="start-menu-items-item">
+                        <li class="start-menu-items-item" id="settings">
                             <img class="icon" src="../assets/images/windows-settings.ico" alt="Settings"/>
                             <p><span class="underline">S</span>ettings</p>
                             <div class="start-menu-items-item-arrowright"></div>     
@@ -113,7 +112,23 @@
 
 			    </div>
 		    </div>
+
+            <div class="window" id="welcome-window">
+                <div class="window-header" id="welcome-header">
+                    Welcome
+                    <span class="close-button" id="close-button">X</span>
+                </div>
+                <div class="window-content">
+                    <p>dsandjsadna</p>
+                </div>
+            </div>
+
+
+
+
+
 		</div>
+
 
 	</body>
 	<script src="../assets/js/windows.js" type="text/javascript"></script>
