--- a/pages/windows95.html
+++ b/pages/windows95.html
@@ -29,7 +29,9 @@
 			<section class="taskbar">
 
 				<div class="taskbar__start">
-					<button class="taskbar__btn"></button>
+					<button class="taskbar__btn">
+						<img class="taskbar__btn__img" src="../assets/images/windows95/windows95-start.ico" alt="Start">
+					</button>
 				</div>
 
 				<div class="taskbar__search">
@@ -38,7 +40,7 @@
 
 
 				<div class="taskbar__clock">
-					
+					<p>10:46</p>
 				</div>
 
 			</section>
