--- a/pages/windows95.html
+++ b/pages/windows95.html
@@ -41,12 +41,29 @@
 						</div>
 						<ul class="taskbar__menu__list">
 
-	                        <li class="taskbar__menu__item">
+	                        <li class="taskbar__menu__item programs">
+	                        	
 	                            <img class="taskbar__menu__icon" src="../assets/images/windows95/windows95-programs.ico" alt="Programs"/>
 	                            <p class="taskbar__menu__title">
 	                            	<span class="taskbar__menu__underline">P</span>rograms
 	                            </p>
 	                            <div class="taskbar__menu__arrowright"></div>
+
+	                            <ul class="taskbar__menu__sub">
+	                                <li class="taskbar__menu__item">
+	                                    <!-- <img class="icon" src="../assets/images/windows-programs.ico" alt="Accessories"/> -->
+	                                    <p class="">Accessories</p>
+	                                </li>       
+	                                <li class="taskbar__menu__item">
+	                                    <!-- <img class="icon" src="../assets/images/windows-programs.ico" alt="StartUp"/> -->
+	                                    <p class="">StartUp</p>
+	                                </li> 
+	                                <li class="taskbar__menu__item">
+	                                    <!-- <img class="icon" src="../assets/images/windows-ms-dos.ico" alt="DOS"/> -->
+	                                    <p class="">MS-DOS Prompt</p>
+	                                </li>
+	                            </ul>
+
 	                        </li>
 
 
