--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Welcome</title>
         <!-- <link rel="manifest" href="manifest.json" /> -->
-        <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+        <!-- <link rel="stylesheet" href="assets/css/style.css" type="text/css"> -->
         <link rel="stylesheet" href="assets/css/computer.css" type="text/css">
-        <link rel="stylesheet" href="assets/css/windows.css" type="text/css">
+        <!-- <link rel="stylesheet" href="assets/css/windows.css" type="text/css"> -->
     </head>
     <body>
         <div class="ibm-frame fullscreen">
