--- a/pages/windows95.html
+++ b/pages/windows95.html
@@ -25,7 +25,7 @@
 					<span class="desktop__shortcut__name">Recycle Bin</span>
 				</div>
 			
-				<section id="window-welcome" class="window">
+				<section id="window-welcome" class="window" data-window-id="window-welcome">
 					<header class="window__header">
 						<span class="window__header__item">
 							Welcome
@@ -40,7 +40,7 @@
 							<div>
 								<div class="window__welcome__message">
 									<p>Did you know...</p>
-									<p>To open a program, you just click the Start button, and then clickthe program's icon.</p>
+									<p>To open a program, you just click the Start button, and then click the program's icon.</p>
 									<img src="../assets/images/windows95/window95-welcome-arrow-start.png">
 								</div>
 								<div class="window__welcome__btns">
@@ -53,7 +53,7 @@
 					</section>
 				</section>
 
-				<section id="window-internet-explorer" class="window">
+				<section id="window-internet-explorer" class="window" data-window-id="window-internet-explorer">
 					<header class="window__header">
 						<span class="window__header__item">
 							About Internet Explorer
