--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>IBM</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <main id="ibm">
@@ -24,7 +24,7 @@
             </div>
         </main>
     </body>
-    <script src="/js/computer/FileSystem.js" type="text/javascript"></script>
-    <script src="/js/computer/Terminal.js" type="text/javascript"></script>
-    <script src="/js/computer/main.js" type="text/javascript"></script>
+    <script src="js/computer/FileSystem.js" type="text/javascript"></script>
+    <script src="js/computer/Terminal.js" type="text/javascript"></script>
+    <script src="js/computer/main.js" type="text/javascript"></script>
 </html>
