--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Windows95</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css">
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<main id="windows95">
@@ -120,9 +121,9 @@
 			</section>
 		</main>
 	</body>
-	<script src="js/Router.js"></script>
 	<script src="js/windows95/window/Window.js"></script>
 	<script src="js/windows95/window/WindowManager.js"></script>
+	<script src="js/Router.js"></script>
 	<script src="js/windows95/TaskbarManager.js"></script>
 	<script src="js/windows95/StartMenuManager.js"></script>
 	<script src="js/windows95/DesktopManager.js"></script>
