cleaning up and improving some code

--- a/terminal.html
+++ b/terminal.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <main id="ibm">
-            <div class="ibm__frame ibm__frame--fullscreen">
-                <div class="ibm__frame__screen ibm__frame__screen--fullscreen">
+            <div class="ibm__frame">
+                <div class="ibm__frame__screen">
                     <div id="ibm__frame__terminal" class="off"></div>
                 </div>
                 <div class="ibm__frame--lower">
@@ -24,6 +24,8 @@
             </div>
         </main>
     </body>
+    <script src="js/computer/filesystem/File.js" type="text/javascript"></script>
+    <script src="js/computer/filesystem/Folder.js" type="text/javascript"></script>
     <script src="js/computer/FileSystem.js" type="text/javascript"></script>
     <script src="js/computer/Terminal.js" type="text/javascript"></script>
     <script src="js/computer/main.js" type="text/javascript"></script>
