--- a/index.html
+++ b/index.html
@@ -1,129 +1,186 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Windows95</title>
-		<link rel="stylesheet" href="css/style.css" type="text/css">
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	</head>
-	<body>
-		<main id="windows95">
-			<section class="desktop">
-				<div class="desktop__shortcut" data-window="welcome">
-					<img class="desktop__shortcut__icon" src="assets/images/windows95/windows95-my-computer.ico" alt="My Computer">
-					<span class="desktop__shortcut__name">My Computer</span>
-				</div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Windows95</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
+    <main id="windows95">
+      <section class="desktop">
+        <div class="desktop__shortcut" data-window="welcome">
+          <img
+            class="desktop__shortcut__icon"
+            src="assets/images/windows95/windows95-my-computer.ico"
+            alt="My Computer"
+          />
+          <span class="desktop__shortcut__name">My Computer</span>
+        </div>
 
-				<div class="desktop__shortcut" data-window="internet-explorer">
-					<img class="desktop__shortcut__icon" src="assets/images/windows95/windows95-mailbox.ico" alt="Inbox">
-					<span class="desktop__shortcut__name">Inbox</span>
-				</div>
+        <div class="desktop__shortcut" data-window="internet-explorer">
+          <img
+            class="desktop__shortcut__icon"
+            src="assets/images/windows95/windows95-mailbox.ico"
+            alt="Inbox"
+          />
+          <span class="desktop__shortcut__name">Inbox</span>
+        </div>
 
-				<div class="desktop__shortcut">
-					<img class="desktop__shortcut__icon" src="assets/images/windows95/windows95-recycle-bin-empty.ico" alt="Recycle Bin">
-					<span class="desktop__shortcut__name">Recycle Bin</span>
-				</div>
-			</section>
+        <div class="desktop__shortcut">
+          <img
+            class="desktop__shortcut__icon"
+            src="assets/images/windows95/windows95-recycle-bin-empty.ico"
+            alt="Recycle Bin"
+          />
+          <span class="desktop__shortcut__name">Recycle Bin</span>
+        </div>
+      </section>
 
-			<section class="taskbar">
-				<div class="taskbar__item taskbar--start">
+      <section class="taskbar">
+        <div class="taskbar__item taskbar--start">
+          <button
+            id="taskbar-start-btn"
+            class="taskbar__btn taskbar__btn--start"
+          >
+            <img
+              class="taskbar__btn__img"
+              src="assets/images/windows95/windows95-start.ico"
+              alt="Start"
+            />
+            <p class="taskbar__btn__text">Start</p>
+          </button>
 
-					<button id="taskbar-start-btn" class="taskbar__btn taskbar__btn--start">
-						<img class="taskbar__btn__img" src="assets/images/windows95/windows95-start.ico" alt="Start">
-						<p class="taskbar__btn__text">Start</p>
-					</button>
+          <div id="taskbar-menu" class="taskbar__menu">
+            <div class="taskbar__menu__side">
+              <p class="taskbar__side__text taskbar__side__ninefive">95</p>
+              <p class="taskbar__side__text taskbar__side__windows">Windows</p>
+            </div>
+            <ul class="taskbar__menu__list">
+              <li class="taskbar__menu__item taskbar__menu__item--programs">
+                <img
+                  class="taskbar__menu__icon"
+                  src="assets/images/windows95/windows95-programs.ico"
+                  alt="Programs"
+                />
+                <p class="taskbar__menu__title">
+                  <span class="taskbar__menu__underline">P</span>rograms
+                </p>
+                <div class="taskbar__menu__arrowright"></div>
 
-					<div id="taskbar-menu" class="taskbar__menu">
-						<div class="taskbar__menu__side">
-							<p class="taskbar__side__text taskbar__side__ninefive">95</p>
-    						<p class="taskbar__side__text taskbar__side__windows">Windows</p>	
-						</div>
-						<ul class="taskbar__menu__list">
+                <ul class="taskbar__menu__sub">
+                  <li class="taskbar__menu__sub__item">
+                    <img
+                      class="icon"
+                      src="assets/images/windows95/windows95-programs.ico"
+                      alt="Accessories"
+                    />
+                    <p class="">Accessories</p>
+                  </li>
+                  <li class="taskbar__menu__item">
+                    <img
+                      class="icon"
+                      src="assets/images/windows95/windows95-programs.ico"
+                      alt="StartUp"
+                    />
+                    <p class="">StartUp</p>
+                  </li>
+                  <li class="taskbar__menu__item">
+                    <img
+                      class="icon"
+                      src="assets/images/windows95/windows95-programs.ico"
+                      alt="DOS"
+                    />
+                    <p class="">MS-DOS Prompt</p>
+                  </li>
+                </ul>
+              </li>
 
-	                        <li class="taskbar__menu__item taskbar__menu__item--programs">   	
-	                            <img class="taskbar__menu__icon" src="assets/images/windows95/windows95-programs.ico" alt="Programs"/>
-	                            <p class="taskbar__menu__title">
-	                            	<span class="taskbar__menu__underline">P</span>rograms
-	                            </p>
-	                            <div class="taskbar__menu__arrowright"></div>
+              <li class="taskbar__menu__item">
+                <img
+                  class="taskbar__menu__icon"
+                  src="assets/images/windows95/windows95-documents.ico"
+                  alt="Documents"
+                />
+                <p class="taskbar__menu__title">
+                  <span class="taskbar__menu__underline">D</span>ocuments
+                </p>
+                <div class="taskbar__menu__arrowright"></div>
+              </li>
 
-	                            <ul class="taskbar__menu__sub">
-	                                <li class="taskbar__menu__sub__item">
-	                                    <img class="icon" src="assets/images/windows95/windows95-programs.ico" alt="Accessories"/>
-	                                    <p class="">Accessories</p>
-	                                </li>       
-	                                <li class="taskbar__menu__item">
-	                                    <img class="icon" src="assets/images/windows95/windows95-programs.ico" alt="StartUp"/>
-	                                    <p class="">StartUp</p>
-	                                </li> 
-	                                <li class="taskbar__menu__item">
-	                                    <img class="icon" src="assets/images/windows95/windows95-programs.ico" alt="DOS"/>
-	                                    <p class="">MS-DOS Prompt</p>
-	                                </li>
-	                            </ul>
-	                        </li>
+              <li class="taskbar__menu__item" id="settings">
+                <img
+                  class="taskbar__menu__icon"
+                  src="assets/images/windows95/windows95-settings.ico"
+                  alt="Settings"
+                />
+                <p class="taskbar__menu__title">
+                  <span class="text__underline">S</span>ettings
+                </p>
+                <div class="taskbar__menu__arrowright"></div>
+              </li>
 
-	                        <li class="taskbar__menu__item">
-	                            <img class="taskbar__menu__icon" src="assets/images/windows95/windows95-documents.ico" alt="Documents"/>
-	                            <p class="taskbar__menu__title">
-	                            	<span class="taskbar__menu__underline">D</span>ocuments
-	                            </p>
-	                            <div class="taskbar__menu__arrowright"></div>          
-	                        </li>
+              <li class="taskbar__menu__item">
+                <img
+                  class="taskbar__menu__icon"
+                  src="assets/images/windows95/windows95-find.ico"
+                  alt="Find"
+                />
+                <p class="taskbar__menu__title">
+                  <span class="text__underline">F</span>ind
+                </p>
+                <div class="taskbar__menu__arrowright"></div>
+              </li>
 
-		                    <li class="taskbar__menu__item" id="settings">
-	                            <img class="taskbar__menu__icon" src="assets/images/windows95/windows95-settings.ico" alt="Settings"/>
-	                            <p class="taskbar__menu__title">
-	                            	<span class="text__underline">S</span>ettings
-	                            </p>
-	                            <div class="taskbar__menu__arrowright"></div>     
-	                        </li>
-	                        
-	                        <li class="taskbar__menu__item">
-	                            <img class="taskbar__menu__icon" src="assets/images/windows95/windows95-find.ico" alt="Find"/>
-	                            <p class="taskbar__menu__title">
-	                            	<span class="text__underline">F</span>ind
-	                            </p>
-	                            <div class="taskbar__menu__arrowright"></div> 
-	                        </li>
+              <li class="taskbar__menu__item">
+                <img
+                  class="taskbar__menu__icon"
+                  src="assets/images/windows95/windows95-help.ico"
+                  alt="Help"
+                />
+                <p class="taskbar__menu__title">
+                  <span class="text__underline">H</span>elp
+                </p>
+              </li>
 
-	                        <li class="taskbar__menu__item">
-	                            <img class="taskbar__menu__icon" src="assets/images/windows95/windows95-help.ico" alt="Help"/>
-	                            <p class="taskbar__menu__title">
-	                            	<span class="text__underline">H</span>elp
-	                            </p>
-	                        </li>
-	                        
-	                        <li class="taskbar__menu__item">
-	                        	<img class="taskbar__menu__icon" src="assets/images/windows95/windows95-run.ico" alt="Run"/>
-	                            <p class="taskbar__menu__title">
-	                            	<span class="text__underline">R</span>un...
-	                            </p>
-	                        </li>
+              <li class="taskbar__menu__item">
+                <img
+                  class="taskbar__menu__icon"
+                  src="assets/images/windows95/windows95-run.ico"
+                  alt="Run"
+                />
+                <p class="taskbar__menu__title">
+                  <span class="text__underline">R</span>un...
+                </p>
+              </li>
 
-	                        <li class="taskbar__menu__item" data-start-menu="shutdown">
-	                        	<img class="taskbar__menu__icon" src="assets/images/windows95/windows95-shutdown.ico" alt="Run"/>
-	                            <p class="taskbar__menu__title">
-	                            	Sh<span class="text__underline">u</span>t Down...
-	                            </p>
-	                        </li>
-		                </ul>
-					</div>
-				</div>
+              <li class="taskbar__menu__item" data-start-menu="shutdown">
+                <img
+                  class="taskbar__menu__icon"
+                  src="assets/images/windows95/windows95-shutdown.ico"
+                  alt="Run"
+                />
+                <p class="taskbar__menu__title">
+                  Sh<span class="text__underline">u</span>t Down...
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
 
-				<div class="taskbar__item taskbar--clock">
-					<p class="taskbar__time"></p>
-				</div>
-			</section>
-		</main>
-	</body>
-	<script src="js/windows95/window/Window.js"></script>
-	<script src="js/windows95/window/WindowManager.js"></script>
-	<script src="js/Router.js"></script>
-	<script src="js/windows95/TaskbarManager.js"></script>
-	<script src="js/windows95/StartMenuManager.js"></script>
-	<script src="js/windows95/DesktopManager.js"></script>
-	<script src="js/windows95/DateTimeManager.js"></script>
-	<script src="js/windows95/main.js"></script>
+        <div class="taskbar__item taskbar--clock">
+          <p class="taskbar__time"></p>
+        </div>
+      </section>
+    </main>
+  </body>
+  <script src="js/windows95/window/Window.js"></script>
+  <script src="js/windows95/window/WindowManager.js"></script>
+  <script src="js/Router.js"></script>
+  <script src="js/windows95/TaskbarManager.js"></script>
+  <script src="js/windows95/StartMenuManager.js"></script>
+  <script src="js/windows95/DesktopManager.js"></script>
+  <script src="js/windows95/DateTimeManager.js"></script>
+  <script src="js/windows95/main.js"></script>
 </html>
