--- a/terminal.html
+++ b/terminal.html
@@ -26,7 +26,7 @@
     </body>
     <script src="js/computer/filesystem/File.js" type="text/javascript"></script>
     <script src="js/computer/filesystem/Folder.js" type="text/javascript"></script>
-    <script src="js/computer/FileSystem.js" type="text/javascript"></script>
+    <script src="js/computer/filesystem/FileSystem.js" type="text/javascript"></script>
     <script src="js/computer/Terminal.js" type="text/javascript"></script>
     <script src="js/computer/main.js" type="text/javascript"></script>
 </html>
