--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </p>
               </li>
 
-              <li class="taskbar__menu__item bind__window" data-bind-window="Shutdown Popup">
+              <li class="taskbar__menu__item bind__window" data-bind-window="Shut Down Windows">
                 <img
                   class="taskbar__menu__icon"
                   src="assets/images/windows95/windows95-shutdown.ico"
