--- a/index.html
+++ b/index.html
@@ -198,8 +198,9 @@
       </section>
     </main>
   </body>
-  <script src="js/windows95/window/Window.js"></script>
-  <script src="js/windows95/window/WindowManager.js"></script>
+  <script src="js/windows95/Window.js"></script>
+  <script src="js/windows95/window/ShutDownWindows.js"></script>
+  <script src="js/windows95/WindowManager.js"></script>
   <script src="js/Router.js"></script>
   <script src="js/windows95/TaskbarManager.js"></script>
   <script src="js/windows95/StartMenuManager.js"></script>
